moved helper package to settings.apk, redesigned the settings menu. Need to do a little more cleaning up  maybe

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -708,6 +708,7 @@
         <!-- Status message when VPN is failed. -->
         <item>Unsuccessful</item>
     </string-array>
+
     <string-array name="pref_alt_lockscreen_values">
 		<item>0</item>
 		<item>1</item>
@@ -716,7 +717,28 @@
 
     <string-array name="pref_alt_lockscreen_entries">
 		<item>Stock Lockscreen</item>
-		<item>Talk Lockscreen</item>
-        	<item>Sms Lockscreen</item>
+		<item>Sound On/Off Lockscreen</item>
+        	<item>Phone Lockscreen</item>
     </string-array>
+
+    <string-array name="pref_alt_meters_values">
+		<item>0</item>
+		<item>1</item>
+        	<item>2</item>
+		<item>3</item>
+		<item>4</item>
+        	<item>5</item>
+        	<item>6</item>
+    </string-array>
+
+    <string-array name="pref_alt_meters_entries">
+		<item>Tranquility Meter</item>
+		<item>Stock ICS Meter</item>
+        	<item>UOT Vertical Meter</item>
+		<item>UOT Ball Meter</item>
+		<item>UOT Broken Circle Meter</item>
+		<item>Animated TranQ Meter</item>
+        	<item>Hide Meter</item>
+    </string-array> 
+
 </resources>
