Add Quick Settings and Changed Layout of some menus.

--- a/res/xml/custom_toggle_settings.xml
+++ b/res/xml/custom_toggle_settings.xml
@@ -29,14 +29,6 @@
 		android:summaryOff="Toggles are off"
 		android:title="Show Toggles" 
 		android:defaultValue="true"	/>
-
-    	<PreferenceScreen
-    		android:layout="?android:attr/preferenceLayoutChild"
-		android:dependency="toggles_show_toggles"
-        	android:fragment="com.android.settings.CustomToggleShowHideSettings"
-        	android:key="custom_toggle_show_hide_settings"
-        	android:title="Show or Hide Toggles" />
-
  
 	<CheckBoxPreference 
 		android:layout="?android:attr/preferenceLayoutChild"
@@ -46,6 +38,43 @@
 		android:summaryOff="Toggles are on the bottom"
 		android:title="Toggle Location Top" 
 		android:defaultValue="true"	/>
+
+    	<PreferenceScreen
+    		android:layout="?android:attr/preferenceLayoutChild"
+		android:dependency="toggles_show_toggles"
+        	android:fragment="com.android.settings.CustomToggleShowHideSettings"
+        	android:key="custom_toggle_show_hide_settings"
+        	android:title="Pick Toggles To Show" />
+    </PreferenceCategory>
+
+    <PreferenceCategory
+		android:title="Quick Settings Buttons"
+		android:key="quicksettings">
+
+	<CheckBoxPreference
+		android:layout="?android:attr/preferenceLayoutChild" 
+		android:key="toggles_show_quicksettings"
+		android:summaryOn="Quick settings are on"
+		android:summaryOff="Quick settings are off"
+		android:title="Quick Settings" 
+		android:defaultValue="true"	/>
+
+	<CheckBoxPreference 
+		android:layout="?android:attr/preferenceLayoutChild"
+		android:dependency="toggles_show_quicksettings"
+		android:key="quicksettings_bottom"
+		android:summaryOff="Quick settings are on the top"
+		android:summaryOn="Quick settings are on the bottom"
+		android:title="Quick Settings Bottom" 
+		android:defaultValue="true"	/>
+
+    	<PreferenceScreen
+    		android:layout="?android:attr/preferenceLayoutChild"
+		android:dependency="toggles_show_quicksettings"
+        	android:fragment="com.android.settings.CustomQuickSettingsShowHideSettings"
+        	android:key="custom_quick_settings_show_hide_settings"
+        	android:title="Pick Settings To Show" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
