--- a/res/xml/custom_icon_settings.xml
+++ b/res/xml/custom_icon_settings.xml
@@ -19,7 +19,7 @@
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
     <PreferenceCategory
-		android:title="ICONS"
+		android:title="ICONS AND COLORS"
 		android:key="icons">
 
 	<CheckBoxPreference 
