Removing Tranquility converting to  Junk Rom

--- a/res/xml/custom_junk_settings.xml
+++ b/res/xml/custom_junk_settings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-    android:title="Tranquility Settings"
-    android:key="tranquility_settings"
+    android:title="Junk Settings"
+    android:key="junk_settings"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
     
@@ -31,18 +31,5 @@
 	    android:summary="Settings to customize the navigation bar"
             android:fragment="com.android.settings.NavBar" />
 
-    <PreferenceScreen
-            android:key="lockscreen_settings"
-            android:title="Lockscreen Settings"
-	    android:summary="Settings to customize the lockscreen style"
-            android:fragment="com.android.settings.Lockscreen" />
 
-    <PreferenceScreen
-            android:key="toolbox_settings"
-            android:title="Tranquility Toolbox"
-	    android:summary="Optional toolbox settings">
-       <intent  android:action="android.intent.action.MAIN"
-                android:targetClass="com.tranquilice.toolbox.MainMenu"
-                android:targetPackage="com.tranquilice.toolbox" />
-    </PreferenceScreen>
 </PreferenceScreen>
