--- a/res/xml/custom_settings.xml
+++ b/res/xml/custom_settings.xml
@@ -15,8 +15,8 @@
 -->
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-        android:title="@string/tranq_settings"
-        xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
+        android:title="Custom Options"
+        >
 
 
     
