--- a/res/xml/custom_statusbar_settings.xml
+++ b/res/xml/custom_statusbar_settings.xml
@@ -15,7 +15,7 @@
 -->
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-        android:title="@string/statusbar_settings"
+        android:title="STATUSBAR SETTINGS"
         xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
 
