--- a/res/xml/device_info_settings.xml
+++ b/res/xml/device_info_settings.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- Copyright (C) 2008 The Android Open Source Project
 
-     Licensed under the Apache License, Version 2.0 (the "License");
-     you may not use this file except in compliance with the License.
-     You may obtain a copy of the License at
-  
-          http://www.apache.org/licenses/LICENSE-2.0
-  
-     Unless required by applicable law or agreed to in writing, software
-     distributed under the License is distributed on an "AS IS" BASIS,
-     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-     See the License for the specific language governing permissions and
-     limitations under the License.
+Licensed under the Apache License, Version 2.0 (the "License");
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at
+http://www.apache.org/licenses/LICENSE-2.0
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and
+limitations under the License.
 -->
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
@@ -19,7 +17,7 @@
 
         <!-- System update settings - launches activity -->
         <PreferenceScreen android:key="system_update_settings"
-                android:title="@string/system_update_settings_list_item_title" 
+                android:title="@string/system_update_settings_list_item_title"
                 android:summary="@string/system_update_settings_list_item_summary">
             <intent android:action="android.settings.SYSTEM_UPDATE_SETTINGS" />
         </PreferenceScreen>
@@ -34,7 +32,7 @@
 
         <!-- Device status - launches activity -->
         <PreferenceScreen android:key="status_info"
-                android:title="@string/device_status" 
+                android:title="@string/device_status"
                 android:summary="@string/device_status_summary">
             <intent android:action="android.intent.action.MAIN"
                     android:targetPackage="com.android.settings"
@@ -46,10 +44,10 @@
                 android:key="container"
                 android:title="@string/legal_information">
                     
-            <!-- Note: The titles given here probably won't be used.  Instead, we programmatically
-                       fill the title with the label of the activity with the corresponding action.
-                       If there is not an activity for an action, the item will be removed from the
-                       list. -->
+            <!-- Note: The titles given here probably won't be used. Instead, we programmatically
+fill the title with the label of the activity with the corresponding action.
+If there is not an activity for an action, the item will be removed from the
+list. -->
 
             <!-- Copyright information -->
             <PreferenceScreen
@@ -80,64 +78,43 @@
             <intent android:action="android.settings.SAFETY" />
         </PreferenceScreen>
 
-
-        <PreferenceScreen android:key="changelog"
-                android:title="@string/changelog_about_title">
-            <intent android:action="android.intent.action.MAIN"
-                    android:targetPackage="com.android.settings"
-                    android:targetClass="com.android.settings.About" />
-        </PreferenceScreen>
-
         <!-- Contributors -->
-        <!-- 
-        <PreferenceScreen
-                android:key="contributors"
-                android:title="@string/contributors_title">
-            <intent android:action="android.settings.TEAM" />
-        </PreferenceScreen>
-        -->
+        <!--
+<PreferenceScreen
+android:key="contributors"
+android:title="@string/contributors_title">
+<intent android:action="android.settings.TEAM" />
+</PreferenceScreen>
+-->
 
         <!-- Device hardware model -->
-        <Preference android:key="device_model" 
+        <Preference android:key="device_model"
                 style="?android:preferenceInformationStyle"
                 android:title="@string/model_number"
                 android:summary="@string/device_info_default"/>
                 
         <!-- Device firmware version -->
-        <Preference android:key="firmware_version" 
+        <Preference android:key="firmware_version"
                 style="?android:preferenceInformationStyle"
                 android:title="@string/firmware_version"
                 android:summary="@string/device_info_default"/>
-
-        <!-- Tranquility version -->
-        <Preference android:key="tranq_version"
-                style="?android:preferenceInformationStyle"
-                android:title="@string/tranq_version"
-                android:summary="@string/tranq_version_default" />
-
-        <!-- Rom build date -->
-        <Preference android:key="build_date"
-                style="?android:preferenceInformationStyle"
-                android:title="@string/build_date"
-                android:summary="@string/build_date_default" />
                 
         <!-- Device Baseband version -->
-        <Preference android:key="baseband_version" 
+        <Preference android:key="baseband_version"
                 style="?android:preferenceInformationStyle"
                 android:title="@string/baseband_version"
                 android:summary="@string/device_info_default"/>
         
         <!-- Device Kernel version -->
-        <Preference android:key="kernel_version" 
+        <Preference android:key="kernel_version"
                 style="?android:preferenceInformationStyle"
                 android:title="@string/kernel_version"
                 android:summary="@string/device_info_default"/>
 
-        <!-- Detailed build version 
-        <Preference android:key="build_number" 
+        <!-- Detailed build version -->
+        <Preference android:key="build_number"
                 style="?android:preferenceInformationStyle"
                 android:title="@string/build_number"
                 android:summary="@string/device_info_default"/>
--->
 
 </PreferenceScreen>
